--- a/src/jobs/hello.yml
+++ b/src/jobs/hello.yml
@@ -10,5 +10,5 @@ parameters:
     default: "World"
     description: "Hello to whom?"
 steps:
-  - greet:
+  - debug:
       to: << parameters.to >>
