--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -17,6 +17,8 @@ jobs:
         - checkout
         # Run your orb's commands to validate them.
         - annotate/debug
+        - annotate/step
+        - annotate/send
 workflows:
   test-deploy:
     jobs:
