add send and step

--- a/src/commands/step.yml
+++ b/src/commands/step.yml
@@ -2,13 +2,13 @@ description: >
   This command captures build step innformation for the trace.
 
 parameters:
-  name:
+  trace_id:
     type: string
     default: "<Undefined>"
     description: "Name of the build step"
 steps:
   - run:
       environment:
-        PARAM_TO: <<parameters.name>>
+        PARAM_TRACE_ID: <<parameters.trace_id>>
       name: Capture Trace
       command: <<include(scripts/step.sh)>>
