--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -8,21 +8,18 @@ filters: &filters
     only: /.*/
 
 jobs:
-    # Create a job to test the commands of your orbs.
-    # You may want to add additional validation steps to ensure the commands are working as expected.
     command-tests:
       docker:
         - image: cimg/base:current
       steps:
         - checkout
-        # Run your orb's commands to validate them.
         - annotate/debug
         - annotate/step
         - annotate/send
+        - annotate/dashbaord
 workflows:
   test-deploy:
     jobs:
-      # Make sure to include "filters: *filters" in every test job you want to run as part of your deployment.
       - command-tests:
           filters: *filters
       - orb-tools/pack:
